Stuff for 26.1.2